--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -5,12 +5,6 @@ default: &default
   source_entry_path: packs
   public_output_path: packs
 
-  compile: false
-
-  # Additional paths webpack should lookup modules
-  # ['app/assets', 'engine/foo/app/assets']
-  resolved_paths: []
-
   extensions:
     - .coffee
     - .erb
@@ -31,7 +25,7 @@ development:
   <<: *default
 
   dev_server:
-    host: localhost
+    host: 0.0.0.0
     port: 8080
     https: false
 
@@ -39,8 +33,6 @@ test:
   <<: *default
 
   public_output_path: packs-test
-  # Compile webpack assets during lookup when running tests
-  compile: true
 
 production:
   <<: *default
