--- a/package.json
+++ b/package.json
@@ -1,42 +1,57 @@
 {
-  "name": "ander",
+  "name": "petsit",
   "private": true,
   "dependencies": {
+    "apollo-client": "^1.8.0",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
     "babel-loader": "7.x",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "coffee-loader": "^0.7.3",
-    "coffee-script": "^1.12.7",
-    "compression-webpack-plugin": "^1.0.0",
+    "coffee-script": "^1.12.6",
+    "compression-webpack-plugin": "^0.4.0",
     "css-loader": "^0.28.4",
+    "debounce": "^1.0.2",
+    "element-ui": "^1.4.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "glob": "^7.1.2",
     "js-yaml": "^3.9.0",
+    "moment": "^2.18.1",
     "node-sass": "^4.5.3",
     "path-complete-extname": "^0.1.0",
-    "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.6",
     "postcss-smart-import": "^0.7.5",
     "precss": "^2.0.0",
     "rails-erb-loader": "^5.0.2",
     "resolve-url-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
+    "sticky-js": "^1.2.0",
     "style-loader": "^0.18.2",
-    "vue": "^2.4.2",
-    "vue-loader": "^12.2.2",
-    "vue-template-compiler": "^2.4.2",
-    "vuetify": "^0.14.5",
-    "webpack": "^3.3.0",
-    "webpack-manifest-plugin": "^1.2.1",
+    "vue": "^2.3.4",
+    "vue-apollo": "^2.1.0-beta.19",
+    "vue-cookie": "^1.1.4",
+    "vue-google-autocomplete": "^1.0.10",
+    "vue-image-lightbox": "^5.5.2",
+    "vue-loader": "^13.0.1",
+    "vue-moment": "^2.0.2",
+    "vue-resource": "^1.3.4",
+    "vue-router": "^2.7.0",
+    "vue-scrollto": "^2.7.2",
+    "vue-template-compiler": "^2.3.4",
+    "vue2-leaflet": "^0.0.51",
+    "vuex": "^2.3.1",
+    "webpack": "^3.1.0",
+    "webpack-manifest-plugin": "^1.1.2",
     "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.6.1"
+    "pug": "^2.0.0-rc.2",
+    "vue-affix": "^0.2.0",
+    "webpack-dev-server": "^2.5.1"
   }
 }
